Updating API to handle single get cases for both Dex id and name
